--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "i-get",
   "version": "0.0.1",
-  "description": "a own project cli",
+  "description": "基于TypeScript开发的Node.js脚手架",
   "private": true,
   "bin": {
     "i-get": "./bin/node"
